manifests/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: tenant-a
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: web
          image: my-frontend-image # Replaced by Kustomize in CI
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: tenant-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: my-backend-image # Replaced by Kustomize in CI
          ports:
            - containerPort: 8080
